--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ var arrurls= new Array(
 );
 var arg=window.location.href.split('?')[1];
 for(var i=0;i<arrnames.length;i++)if(arrnames[i]==arg)window.location.href=arrurls[i];
-window.location.href="https://yqloss.github.io/j?s=ADVVJMJTIwTm90JTIwRm91bmQh"
+window.location.href="https://yqloss.github.io/j?s=ADVVJMJTIwTm90JTIwRm91bmQh";
 </script>
 </head>
 </html>
