--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ var urls={
 var arg=window.location.href.split('?')[1].split("&").join("=").split("=");
 var arga;
 for(var i=0;i<arg.length;i+=2)if(arg[i]=="s")arga=arg[i+1];
-arga=urls[arga];
-window.location.href=arga?arga:"https://yqloss.github.io/j?s=ADVVJMJTIwTm90JTIwRm91bmQh";
+window.location.href=urls[arga];
 </script>
 </head>
 </html>
