--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <script>
 var urls={
   luogu:"https://www.luogu.com.cn/",
-  bcly:"https://47.104.93.98/"
+  bcly:"https://47.104.93.98/",
+  huaji:"https://www.desmos.com/calculator/6xvwg5yugs?lang=zh-CN"
 };
 var arg=window.location.href.split('?')[1].split("&").join("=").split("=");
 var arga;
