--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 var urls={
   luogu:"https://www.luogu.com.cn/",
   bcly:"https://47.104.93.98/",
-  huaji:"https://www.desmos.com/calculator/6xvwg5yugs?lang=zh-CN"
+  huaji:"https://www.desmos.com/calculator/6xvwg5yugs?lang=zh-CN",
+  _:"https://yqloss.github.io/j?s=d2hpbGUoMSl3aW5kb3cub3Blbih3aW5kb3cubG9jYXRpb24uaHJlZiwnX2JsYW5rJyk7"
 };
 var arg=window.location.href.split('?')[1].split("&").join("=").split("=");
 var arga;
